--- a/list-search/case-2/.eslintrc
+++ b/list-search/case-2/.eslintrc
@@ -28,6 +28,7 @@
     "react/prop-types": "off",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
+    "react/display-name": "off",
     "prettier/prettier": [
       "warn",
       {
